# stella-emu-stella

./: .gitignore  CMakeLists.txt  Changes.txt  build.adoc  readme.adoc  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
dev/docs/: sdl3.adoc  stella.adoc
dev/scripts/: install-sdl3-deps.sh  install-sdl3.sh  install-stella-deps.sh
dev/src/: main.cpp
docs/: index.html
src/: CMakeLists.txt
src/cheat/: CMakeLists.txt
src/common/: CMakeLists.txt  KeyMap.cxx  KeyMap.hxx  LinkedObjectPool.hxx  SoundSDL.cxx
src/common/audio/: CMakeLists.txt
src/common/repository/: CMakeLists.txt
src/common/repository/sqlite/: CMakeLists.txt
src/common/sdl_blitter/: CMakeLists.txt
src/common/tv_filters/: AtariNTSC.hxx  CMakeLists.txt
src/debugger/: CMakeLists.txt  CartDebug.cxx
src/debugger/gui/: CMakeLists.txt  Cart3EPlusWidget.cxx  CartBFWidget.hxx  CartBUSWidget.cxx  CartCDFWidget.cxx  CartEFFWidget.cxx  CartEFFWidget.hxx  CartEnhancedWidget.hxx  module.mk
src/debugger/yacc/: CMakeLists.txt
src/emucore/: Bankswitch.cxx  Bankswitch.hxx  CMakeLists.txt  CartAR.cxx  CartBUS.cxx  CartCDF.cxx  CartCreator.cxx  CartDetector.cxx  CartDetector.hxx  CartEFF.cxx  CartEFF.hxx  CartEnhanced.cxx  CartMVC.cxx  CortexM0.cxx  FrameBuffer.cxx  MT24LC16B.cxx  MT24LC16B.hxx  MT24LC256.hxx  MicroChip24LC.hxx  Thumbulator.cxx  module.mk
src/emucore/elf/: CMakeLists.txt
src/emucore/exception/: CMakeLists.txt
src/emucore/tia/: CMakeLists.txt  TIA.cxx
src/emucore/tia/frame-manager/: CMakeLists.txt
src/gui/: CMakeLists.txt  FavoritesManager.cxx  FavoritesManager.hxx  Widget.cxx
src/lib/: CMakeLists.txt
src/lib/httplib/: CMakeLists.txt
src/lib/json/: CMakeLists.txt
src/lib/libpng/: CMakeLists.txt
src/lib/nanojpeg/: CMakeLists.txt
src/lib/sqlite/: CMakeLists.txt
src/lib/tinyexif/: CMakeLists.txt
src/lib/zlib/: CMakeLists.txt
src/os/libretro/: Makefile.common
src/os/macos/stella.xcodeproj/: project.pbxproj
src/os/unix/: CMakeLists.txt
src/os/unix/r77/: CMakeLists.txt
src/os/windows/: Stella.vcxproj  Stella.vcxproj.filters
src/stella-emu/: CMakeLists.txt.old  readme.adoc
