# emucore

set(sources
    AmigaMouse.hxx
    AtariMouse.hxx
    AtariVox.cxx
    AtariVox.hxx
    Bankswitch.cxx
    Bankswitch.hxx
    Booster.cxx
    Booster.hxx
    Cart03E0.cxx
    Cart03E0.hxx
    Cart0840.cxx
    Cart0840.hxx
    Cart0FA0.cxx
    Cart0FA0.hxx
    Cart2K.cxx
    Cart2K.hxx
    Cart3E.cxx
    Cart3E.hxx
    Cart3EPlus.cxx
    Cart3EPlus.hxx
    Cart3EX.cxx
    Cart3EX.hxx
    Cart3F.cxx
    Cart3F.hxx
    Cart4A50.cxx
    Cart4A50.hxx
    Cart4K.cxx
    Cart4K.hxx
    Cart4KSC.cxx
    Cart4KSC.hxx
    CartAR.cxx
    CartAR.hxx
    CartARM.cxx
    CartARM.hxx
    CartBF.cxx
    CartBF.hxx
    CartBFSC.cxx
    CartBFSC.hxx
    CartBUS.cxx
    CartBUS.hxx
    CartCDF.cxx
    CartCDF.hxx
    CartCM.cxx
    CartCM.hxx
    CartCreator.cxx
    CartCreator.hxx
    CartCTY.cxx
    CartCTY.hxx
    CartCV.cxx
    CartCV.hxx
    Cart.cxx
    CartDetector.cxx
    CartDetector.hxx
    CartDF.cxx
    CartDF.hxx
    CartDFSC.cxx
    CartDFSC.hxx
    CartDPC.cxx
    CartDPC.hxx
    CartDPCPlus.cxx
    CartDPCPlus.hxx
    CartE0.cxx
    CartE0.hxx
    CartE7.cxx
    CartE7.hxx
    CartEF.cxx
    CartEF.hxx
    CartEFSC.cxx
    CartEFSC.hxx
    CartELF.cxx
    CartELF.hxx
    CartEnhanced.cxx
    CartEnhanced.hxx
    CartF0.cxx
    CartF0.hxx
    CartF4.cxx
    CartF4.hxx
    CartF4SC.cxx
    CartF4SC.hxx
    CartF6.cxx
    CartF6.hxx
    CartF6SC.cxx
    CartF6SC.hxx
    CartF8.cxx
    CartF8.hxx
    CartF8SC.cxx
    CartF8SC.hxx
    CartFA2.cxx
    CartFA2.hxx
    CartFA.cxx
    CartFA.hxx
    CartFC.cxx
    CartFC.hxx
    CartFE.cxx
    CartFE.hxx
    CartGL.cxx
    CartGL.hxx
    Cart.hxx
    CartJANE.cxx
    CartJANE.hxx
    CartMDM.cxx
    CartMDM.hxx
    CartMVC.cxx
    CartMVC.hxx
    CartSB.cxx
    CartSB.hxx
    CartTVBoy.cxx
    CartTVBoy.hxx
    CartUA.cxx
    CartUA.hxx
    CartWD.cxx
    CartWD.hxx
    CartWF8.cxx
    CartWF8.hxx
    CartX07.cxx
    CartX07.hxx
    CompuMate.cxx
    CompuMate.hxx
    Console.cxx
    Console.hxx
    ConsoleIO.hxx
    ConsoleTiming.hxx
    Control.cxx
    Control.hxx
    ControllerDetector.cxx
    ControllerDetector.hxx
    ControlLowLevel.hxx
    CortexM0.cxx
    CortexM0.hxx
    DefProps.hxx
    Device.hxx
    DispatchResult.cxx
    DispatchResult.hxx
    Driving.cxx
    Driving.hxx
    EmulationTiming.cxx
    EmulationTiming.hxx
    EmulationWorker.cxx
    EmulationWorker.hxx
    EventHandlerConstants.hxx
    EventHandler.cxx
    EventHandler.hxx
    Event.hxx
    FBBackend.hxx
    FBSurface.cxx
    FBSurface.hxx
    FrameBufferConstants.hxx
    FrameBuffer.cxx
    FrameBuffer.hxx
    FSNode.cxx
    FSNode.hxx
    Genesis.cxx
    Genesis.hxx
    GlobalKeyHandler.cxx
    GlobalKeyHandler.hxx
    Joy2BPlus.cxx
    Joy2BPlus.hxx
    Joystick.cxx
    Joystick.hxx
    Keyboard.cxx
    Keyboard.hxx
    KidVid.cxx
    KidVid.hxx
    Lightgun.cxx
    Lightgun.hxx
    M6502.cxx
    M6502.hxx
    M6532.cxx
    M6532.hxx
    MD5.cxx
    MD5.hxx
    MindLink.cxx
    MindLink.hxx
    MT24LC256.cxx
    MT24LC256.hxx
    NullDev.hxx
    OSystem.cxx
    OSystem.hxx
    OSystemStandalone.cxx
    OSystemStandalone.hxx
    Paddles.cxx
    Paddles.hxx
    PlusROM.cxx
    PlusROM.hxx
    PointingDevice.cxx
    PointingDevice.hxx
    ProfilingRunner.cxx
    ProfilingRunner.hxx
    Props.cxx
    Props.hxx
    PropsSet.cxx
    PropsSet.hxx
    QuadTari.cxx
    QuadTari.hxx
    Random.hxx
    SaveKey.cxx
    SaveKey.hxx
    Serializable.hxx
    Serializer.cxx
    Serializer.hxx
    SerialPort.hxx
    Settings.cxx
    Settings.hxx
    Sound.hxx
    Switches.cxx
    Switches.hxx
    System.cxx
    System.hxx
    Thumbulator.cxx
    Thumbulator.hxx
    TIASurface.cxx
    TIASurface.hxx
    TrakBall.hxx
)

target_sources(${target} PRIVATE ${sources})

add_subdirectory(elf)
add_subdirectory(exception)
add_subdirectory(tia)
