
set(target gui)
add_library(${target})
target_sources(${target} PRIVATE
	AboutDialog.cxx
	BrowserDialog.cxx
	CheckListWidget.cxx
	ColorWidget.cxx
	ComboDialog.cxx
	CommandDialog.cxx
	CommandMenu.cxx
	ContextMenu.cxx
	DeveloperDialog.cxx
	Dialog.cxx
	DialogContainer.cxx
	EditableWidget.cxx
	EditTextWidget.cxx
	EmulationDialog.cxx
	EventMappingWidget.cxx
	FavoritesManager.cxx
	FileListWidget.cxx
	Font.cxx
	GameInfoDialog.cxx
	GlobalPropsDialog.cxx
	HelpDialog.cxx
	HighScoresDialog.cxx
	HighScoresMenu.cxx
	InputDialog.cxx
	InputTextDialog.cxx
	JoystickDialog.cxx
	Launcher.cxx
	LauncherDialog.cxx
	LauncherFileListWidget.cxx
	ListWidget.cxx
	LoggerDialog.cxx
	MessageBox.cxx
	MessageDialog.cxx
	MessageMenu.cxx
	MinUICommandDialog.cxx
	NavigationWidget.cxx
	OptionsDialog.cxx
	OptionsMenu.cxx
	PlusRomsMenu.cxx
	PlusRomsSetupDialog.cxx
	PopUpWidget.cxx
	ProgressDialog.cxx
	QuadTariDialog.cxx
	RadioButtonWidget.cxx
	RomAuditDialog.cxx
	RomImageWidget.cxx
	RomInfoWidget.cxx
	ScrollBarWidget.cxx
	SnapshotDialog.cxx
	StellaSettingsDialog.cxx
	StringListWidget.cxx
	TabWidget.cxx
	TimeLineWidget.cxx
	TimeMachine.cxx
	TimeMachineDialog.cxx
	ToolTip.cxx
	UIDialog.cxx
	UndoHandler.cxx
	VideoAudioDialog.cxx
	WhatsNewDialog.cxx
	Widget.cxx
)

